Update for CNRM code

--- a/hydro_parameters.in
+++ b/hydro_parameters.in
@@ -11,31 +11,31 @@
   yearstart=1980,
   monstart=1,
   daystart=1,
-  hourstart=0,
+  hourstart=6,
   hourstep=6,
-  intsend=124,
+  intsend=1463,
   /
 
 &DIR
-  inDataDir='/nobackup/global/x_joakj/data/era-interim/',
-  outDataDir='/nobackup/global/x_joakj/data/',
-  tmpDataDir='/nobackup/global/x_joakj/data/',
-  topoDir='/nobackup/global/x_joakj/data/gfdl-cm3/topo/',
+  inDataDir='/nobackup/vagn2/x_joakj/data/cnrm/historical/',
+  outDataDir='/nobackup/vagn2/x_joakj/data/cnrm/psi/',
+  tmpDataDir='/scratch/local/x_joakj/',
+  topoDir='/nobackup/vagn2/x_joakj/data/cnrm/topo/',
   /
 
 &FILE
-  project='ERA',
-  prefix='era_tendency_psirr',
+  project='CNRM-HISTR',
+  prefix=cnrm_historical_1980,
   /
 
 &GRID
-  IMT=288,
-  JMT=144,
-  KM=60,
+  IMT=144,
+  JMT=72,
+  KM=31,
   MR=251,  !Number of points for psi(r,r) stream functions
-  MR2=45,  !Number of points for isobaric zonal averages
-  NRST=3,  !1=q, 2=DSE, 3=MSE, 4=alpha, 5=p, 6=T
-  LBAS=1,  !1=NH, 2=SH, 3=Total
+  MR2=15,  !Number of points for isobaric averages and meridional overturning
+  NRST=3,  !1-q, 2-dse, 3-mse, 4-t, 5-mse, 6-alpha
+  LBAS=1   !1=NH, 2=SH, 3=Total
   /
 
 &COORD
@@ -48,7 +48,7 @@
   dmin = 240.,
   dmax = 360.,
   mmin = 240.,
-  mmax = 450.,
+  mmax = 440.,
   amin = 0.5,
   amax = 6.,
   /
@@ -56,9 +56,11 @@
 &MISC
   lverbose   = .false.,
   logp       = .false.,
-  tweak_tmean = 0,
-  tweak_zmean = 0,
-  tweak_tend = -1,
-  tweak_freq = 0,
+  tweak_tmean =  0,
+  tweak_zmean =  1,
+  tweak_tend  = -1,
+  tweak_freq  =  0,
   /  
+    
 !!----------------------------------------------
+
